[package]
name = "euler493"
version = "0.1.0"
authors = ["Shen Longbin <slofslb@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
bitstream-io = "0.8"
# itertools = "0.8"
num-bigint = "0.2"
num-traits = "0.2"
itertools = "0.9.0"
